<resources>
    <string name="app_name">Training Assistant</string>
    <string name="add_exercise_activity">Add New Exercise</string>
    <string name="edit_exercise_activity">Edit Exercise</string>
    <string name="session_activity">Session Editor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Personal Training Assistant</string>
    <string name="nav_header_subtitle">Leave the grunt work to me</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_wiki">Wiki</string>
    <string name="menu_schedule">Daily Schedule</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_programs">Programs</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_camera">Camera (No Functionality.. Yet)</string>
    <string name="menu_muscles">Muscles</string>
    <string name="dateTime_format">yyyy-MM-dd hh:mm a</string>
    <string name="time_format">hh:mm a</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="filePath">/data/data/com.trainingapp.trainingassistant/databases/data.sqlite3</string>
    <string name="emptyDay">No Sessions Today</string>
    <string name="scheduleDatePlaceholder">Click to choose date</string>
    <string name="lblSessionClientName">Client Name: </string>
    <string name="txtSessionClientName">Client Name Here</string>
    <string name="lblSessionDate">Session Date: </string>
    <string name="txtSessionDate">Session Date Here</string>
    <string name="lblSessionTime">Session Start Time: </string>
    <string name="txtSessionTime">Session Time Here</string>
    <string name="lblSessionDuration">Session Duration: </string>
    <string name="txtSessionDurationPlaceHolder">Session Duration Here</string>
    <string name="txtSessionDuration">%1$d mins</string>
    <string name="btnChangeSessionDuration">Change Duration</string>
    <string name="btnChangeSessionDate">Change Date</string>
    <string name="btnChangeSessionTime">Change Time</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lblNotes">Notes: </string>
    <string name="blank">blank</string>
    <string name="txtSessionExerciseOrderPlaceHolder">#</string>
    <string name="txtSessionExerciseNamePlaceHolder">Exercise Name Here</string>
    <string name="txtSessionExerciseSetsPlaceHolder">Sets: Sets Here</string>
    <string name="txtSessionExerciseRepsPlaceHolder">Reps: Reps Here</string>
    <string name="txtSessionExerciseResistancePlaceHolder">Resistance: Here</string>
    <string name="lblExerciseOrderHeader"><b>Order</b></string>
    <string name="lblExerciseSetsHeader"><b>Sets</b></string>
    <string name="lblExerciseRepsHeader"><b>Reps</b></string>
    <string name="lblExerciseResistanceHeader"><b>Resistance</b></string>
    <string name="txtClientsName">Client Name</string>
    <string name="txtClientsSessionType">Session Type</string>
    <string name="txtClientsDays">Client Days</string>
    <string name="txtClientsTimes">Client Times</string>
    <string name="txtClientsStartEndDate">Start/End Date</string>
    <string name="lblClientsDays">Days</string>
    <string name="lblClientsTimes">Times</string>
    <string name="name_header">Name</string>
    <string name="name_header_bold"><b>Name</b></string>
    <string name="lblExercisesType">Exercise Type</string>
    <string name="lblExercisesPrimeMover">Prime Mover</string>
    <string name="lblExercisesSecondaryMovers">Secondary Movers</string>
    <string name="titleAddExerciseDialog">Add Exercise</string>
    <string name="titleEditExerciseDialog">Edit Exercise</string>
    <string name="confirm_delete">Are you sure you want to remove %1$s?</string>
    <string name="confirm_delete_exercise">Are you sure you want to remove %1$s?\nThis Action is not reversible and deletes all occurrences of this exercise in logged session</string>
    <string name="confirm_delete_client">Are you sure you want to remove %1$s?\nThis Action is not reversible and deletes all of their logged sessions</string>
    <string name="confirm_delete_session">Are you sure you want to remove the session belonging to %1$s?\nThis Action is not reversible and deletes all session information included\n(If the client has a set schedule this session will be added to the makeup sessions list)</string>
    <string name="confirm_unsaved_changes">Confirm changes before leaving session?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="wiki_title"><u>Personal Training Assistant Wiki</u></string>
    <string name="wiki_overview">Overview</string>
    <string name="wiki_classification">Classification</string>
    <string name="wiki_creation">Creation</string>
    <string name="wiki_deletion">Deletion</string>
    <string name="wiki_overview_body">Overview body</string>
    <string name="wiki_classification_body">Classification body</string>
    <string name="wiki_creation_body">Creation body</string>
    <string name="wiki_deletion_body">Deletion body</string>
    <string name="wiki_introduction_header"><u>Introduction</u></string>
    <string name="wiki_introduction_body">Introduction Body</string>
    <string name="wiki_input_fields_header"><u>Input Fields</u></string>
    <string name="wiki_input_fields_body">Input Fields Body</string>
    <string name="wiki_clients_header"><u>Clients</u></string>
    <string name="wiki_joints_header"><u>Joints</u></string>
    <string name="wiki_joints_body">Joints body</string>
    <string name="wiki_muscles_header"><u>Muscles</u></string>
    <string name="wiki_exercises_header"><u>Exercises</u></string>
    <string name="wiki_sessions_header"><u>Sessions</u></string>
    <string name="wiki_sessions_limits_header">Limits</string>
    <string name="wiki_sessions_limits_body">Limits body</string>
    <string name="settings_24_clock">24 Hour Clock</string>
    <string name="settings_default_duration">Default Session Duration</string>
    <string name="add_client_name">Client Name</string>
    <string name="add_client_start_date">Start Date:</string>
    <string name="add_client_end_date">End Date:</string>
    <string name="add_client_rad_group_lbl">Schedule Type</string>
    <string name="add_client_is_weekly_const">Weekly Constant</string>
    <string name="add_client_is_weekly_var">Weekly Variable</string>
    <string name="add_client_is_monthly_var">Monthly Variable</string>
    <string name="add_client_is_no_schedule">No Schedule</string>
    <string name="weekly_const_mon">Monday</string>
    <string name="weekly_const_tue">Tuesday</string>
    <string name="weekly_const_wed">Wednesday</string>
    <string name="weekly_const_thu">Thursday</string>
    <string name="weekly_const_fri">Friday</string>
    <string name="weekly_const_sat">Saturday</string>
    <string name="weekly_const_sun">Sunday</string>
    <string name="weekly_variable_num_sessions"># of weekly Sessions:</string>
    <string name="monthly_variable_num_sessions"># of monthly Sessions:</string>
    <string name="weekly_const_duration">Duration (mins)</string>
    <string name="add_edit_muscle_name">Muscle Name</string>
    <string name="add_muscle_title">Add Muscle</string>
    <string name="edit_muscle_title">Edit Muscle</string>
    <string name="progress_exercise_data">Getting Exercise Data</string>
    <string name="add_session_start_time">Start Time:</string>
    <string name="add_session_title">Add Session</string>
    <string name="add_client_title">Add Client</string>
    <string name="edit_client_title">Edit Client</string>
    <string name="add_program_title">Add Program</string>
    <string name="edit_program_title">Edit Program</string>
    <string name="alert_dialog_confirm_removal">Confirm Removal</string>
    <string name="program_days">Days</string>
    <string name="program_day">Day</string>
    <string name="program_days_bold"><b>Day(s)</b></string>
    <string name="program_exercises"># Exercises</string>
    <string name="program_desc">Description</string>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="getExerciseQuery">
        Select e.exercise_id,
               e.exercise_name,
               e.exercise_type,
               e.primary_mover_id,
               (
                    Case
                        When e.exercise_type = 1 then m.muscle_name
                        When e.exercise_type = 2 or e.exercise_type = 3 then j.joint_name
                    End
                ) as \'primary_mover_name\',
               ifnull
                (
                    (
                        Select group_concat(s.secondary_mover_id)
                        From secondary_movers s
                        Where s.exercise_id = %1$d
                        Group By s.exercise_id
                    ),
                    \'0\'
                ) as \'secondary_movers_ids\',
               ifnull
                (
                    (
                        Select group_concat
                        (
                            (
                                Case
                                    When e.exercise_type = 1 then m.muscle_name
                                    When e.exercise_type = 2 or e.exercise_type = 3 then j.joint_name
                                End
                            )
                        )
                        From secondary_movers s
                        left join Muscles m on s.secondary_mover_id=m.muscle_id
                        left join Joints j on s.secondary_mover_id=j.joint_id
                        Where s.exercise_id = %1$d
                        Group By s.exercise_id
                    ),
                    \'0\'
                ) as \'secondary_movers_names\'
        From Exercises e
        left join Muscles m on e.primary_mover_id=m.muscle_id
        left join Joints j on e.primary_mover_id=j.joint_id
        Where e.exercise_id = %1$s;</string>
</resources>