<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_clients"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_exercises"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_muscles"
            android:icon="@drawable/ic_muscles_logo"
            android:title="@string/menu_muscles"/>
        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/ic_external_content_duckduckgo_com_th"
            android:title="@string/action_wiki" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
    </group>

</menu>
