<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <AutoCompleteTextView
        android:id="@+id/actxtAddExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_exercises"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="flagNoFullscreen"/>

    <EditText
        android:id="@+id/etxtAddResistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblExerciseResistanceHeader"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actxtAddExerciseName"/>

    <EditText
        android:id="@+id/etxtAddSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblExerciseSetsHeader"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtAddResistance"/>

    <EditText
        android:id="@+id/etxtAddReps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblExerciseRepsHeader"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtAddSets"/>

    <EditText
        android:id="@+id/etxtAddExerciseOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblExerciseOrderHeader"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtAddReps"/>

</androidx.constraintlayout.widget.ConstraintLayout>