<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/actxtAddProgramExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/menu_exercises"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="flagNoFullscreen"/>

        <EditText
            android:id="@+id/etxtAddProgramExerciseSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblExerciseSetsHeader"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actxtAddProgramExerciseName"/>

        <EditText
            android:id="@+id/etxtAddProgramExerciseReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblExerciseRepsHeader"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etxtAddProgramExerciseSets"/>

        <EditText
            android:id="@+id/etxtAddProgramExerciseExerciseOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblExerciseOrderHeader"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etxtAddProgramExerciseReps"/>

        <EditText
            android:id="@+id/etxtAddProgramExerciseDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/program_day"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etxtAddProgramExerciseExerciseOrder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

