<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_introduction_header"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:id="@+id/wikiIntroductionBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_introduction_body"
                android:textSize="14sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_input_fields_header"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:id="@+id/wikiInputsFieldsBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_input_fields_body"
                android:textSize="14sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_sessions_header"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:id="@+id/wikiSessionsBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_sessions_body"
                android:textSize="14sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_exercises_header"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>

            <TextView
                android:id="@+id/wikiExerciseBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wiki_exercises_body"
                android:textSize="14sp"
                android:paddingTop="@dimen/base_pad"
                android:paddingBottom="@dimen/base_pad"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>